idk what i even did

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -31,8 +31,8 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
-application/modify_resources=false
-application/icon=""
+application/modify_resources=true
+application/icon="res://icon.png"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
